--- a/mop-backstage/app-config.yaml
+++ b/mop-backstage/app-config.yaml
@@ -35,15 +35,10 @@ backend:
 integrations:
   github:
     - host: github.com
-      # This is a Personal Access Token or PAT from GitHub. You can find out how to generate this token, and more information
-      # about setting up the GitHub integration here: https://backstage.io/docs/integrations/github/locations#configuration
-      token: ${GITHUB_TOKEN}
-    ### Example for how to add your GitHub Enterprise instance using the API:
-    # - host: ghe.example.net
-    #   apiBaseUrl: https://ghe.example.net/api/v3
-    #   token: ${GHE_TOKEN}
+      apps:
+        - $include: github-app-mop-backstage-credentials.yaml
 
-proxy:
+# proxy:
   ### Example for how to add a proxy endpoint for the frontend.
   ### A typical reason to do this is to handle HTTPS and CORS for internal services.
   # endpoints:
@@ -68,7 +63,7 @@ auth:
     # See https://backstage.io/docs/auth/guest/provider
     guest: {}
 
-scaffolder:
+# scaffolder:
   # see https://backstage.io/docs/features/software-templates/configuration for software template options
 
 catalog:
@@ -82,6 +77,9 @@ catalog:
     - type: file
       target: ../../examples/entities.yaml
 
+    - type: url
+      target: https://gihub.com/gudo11y/mop-core/catalog.yaml
+
     # Local example template
     - type: file
       target: ../../examples/template/template.yaml
@@ -94,6 +92,19 @@ catalog:
       rules:
         - allow: [User, Group]
 
+    - type: file
+      target: ./catalog.yaml
+
+  providers:
+    githubOrg:
+      id: 'github'
+      githubUrl: 'https://github.com'
+      orgs: ['gudo11y']
+      schedule:
+        initialDelay: { seconds: 30 }
+        frequency: { seconds: 10 }
+        timeout: { minutes: 50 }
+
     ## Uncomment these lines to add more example data
     # - type: url
     #   target: https://github.com/backstage/backstage/blob/master/packages/catalog-model/examples/all.yaml
@@ -104,7 +115,7 @@ catalog:
     #   rules:
     #     - allow: [User, Group]
 
-kubernetes:
+# kubernetes:
   # see https://backstage.io/docs/features/kubernetes/configuration for kubernetes configuration options
 
 # see https://backstage.io/docs/permissions/getting-started for more on the permission framework
