--- a/mop-backstage/packages/backend/package.json
+++ b/mop-backstage/packages/backend/package.json
@@ -28,6 +28,7 @@
     "@backstage/plugin-catalog-backend-module-github-org": "^0.3.13",
     "@backstage/plugin-catalog-backend-module-logs": "^0.1.13",
     "@backstage/plugin-catalog-backend-module-scaffolder-entity-model": "^0.2.11",
+    "@backstage/plugin-events-backend-module-github": "^0.4.3",
     "@backstage/plugin-kubernetes-backend": "^0.20.1",
     "@backstage/plugin-notifications-backend": "^0.5.9",
     "@backstage/plugin-permission-backend": "^0.7.3",
